--- a/app/src/main/res/layout/activity_anura_measurement.xml
+++ b/app/src/main/res/layout/activity_anura_measurement.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/baseLayoutFaceScan"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,68 +16,68 @@
 
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/dfxsdkversion_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DFX ID: "
         android:textColor="#FFF"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/measurementId_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Measurement ID: "
         android:textColor="#FFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/snr_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/snr_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SNR: "
         android:textColor="#FFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/msi_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/msi_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MSI: "
         android:textColor="#FFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/bpd_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/bpd_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BPD: "
         android:textColor="#FFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/bps_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/bps_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BPS: "
         android:textColor="#FFF"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -87,10 +88,10 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:padding="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="8dp"
         android:src="@drawable/close_breathwork"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
