--- a/app/src/main/res/layout/item_card_view_ai.xml
+++ b/app/src/main/res/layout/item_card_view_ai.xml
@@ -63,6 +63,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_bold"
                     android:text="1 hr 03 mins"
                     android:textSize="19sp"
                     android:textColor="@color/workout_textcolor"
@@ -85,6 +86,7 @@
                     android:layout_marginTop="35dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_regular"
                     android:text="Total Duration"
                     android:textSize="8sp"
                     android:textColor="@color/workout_textcolor"
@@ -118,6 +120,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_bold"
                     android:text="514 cal"
                     android:textSize="19sp"
                     android:textColor="@color/workout_textcolor"
@@ -140,6 +143,7 @@
                     android:layout_marginTop="35dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_regular"
                     android:text="Calorie Burned"
                     android:textSize="8sp"
                     android:textColor="@color/workout_textcolor"
@@ -173,6 +177,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_bold"
                     android:text="514 cal"
                     android:textSize="19sp"
                     android:textColor="@color/workout_textcolor"
@@ -195,6 +200,7 @@
                     android:layout_marginTop="35dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/dmsans_regular"
                     android:text="Avg heart rate"
                     android:textSize="8sp"
                     android:textColor="@color/workout_textcolor"
