--- a/app/src/main/res/layout/layout_challenge_daily_score.xml
+++ b/app/src/main/res/layout/layout_challenge_daily_score.xml
@@ -42,6 +42,21 @@
                 android:textColor="@color/menuselected"
                 android:textSize="14sp" />
 
+            <TextView
+                android:id="@+id/tvResync"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:text="Resync"
+                android:textSize="12sp"
+                android:layout_toStartOf="@id/imgForwardChallenge"
+                android:gravity="center"
+                android:textColor="@color/red"
+                android:paddingHorizontal="8dp"
+                android:layout_marginEnd="10dp"
+                android:drawableTint="@color/red"
+                android:drawableLeft="@drawable/baseline_sync_24"
+                android:background="@drawable/rounded_red_border"/>
+
             <ImageView
                 android:id="@+id/imgForwardChallenge"
                 android:layout_width="wrap_content"
