--- a/app/src/main/res/layout/bottomsheet_water_intake_selection.xml
+++ b/app/src/main/res/layout/bottomsheet_water_intake_selection.xml
@@ -219,8 +219,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|top"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="120dp"
+                android:layout_marginEnd="5dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -238,7 +239,7 @@
                     android:text="Water Intake Goal"
                     android:textColor="@color/black_no_meals"
                     android:fontFamily="@font/dmsans_regular"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
