--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -67,7 +67,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:text="Poha"
                         android:textSize="24sp"
-                        android:fontFamily="@font/dmsans_bold"
+                        android:fontFamily="@font/merriweather_bold"
                         android:textColor="@color/black_no_meals"
                         />
 
