--- a/app/src/main/res/layout/fragment_your_meal_logs.xml
+++ b/app/src/main/res/layout/fragment_your_meal_logs.xml
@@ -49,7 +49,7 @@
                     android:textColor="@color/meal_log_title"
                     android:fontFamily="@font/merriweather_bold"
                     android:layout_marginTop="20dp"
-                    android:text="Your Meal Logs" />
+                    android:text="Your Meal Log" />
 
                 <ImageView
                     android:id="@+id/image_calender"
