--- a/app/src/main/res/layout/item_lunch_meal_logs_ai.xml
+++ b/app/src/main/res/layout/item_lunch_meal_logs_ai.xml
@@ -51,15 +51,16 @@
 
             <TextView
                 android:id="@+id/tv_meal_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:visibility="visible"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="3"
                 app:layout_constraintStart_toEndOf="@+id/image_meal"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="14sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/black_no_meals"
@@ -72,6 +73,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@+id/image_meal"
                 app:layout_constraintTop_toBottomOf="@+id/tv_meal_name"
                 android:orientation="horizontal"
@@ -143,6 +145,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="3dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:orientation="horizontal">
