--- a/app/src/main/res/layout/fragment_iron.xml
+++ b/app/src/main/res/layout/fragment_iron.xml
@@ -469,34 +469,61 @@
 
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/iron_description_heading"
-                android:layout_width="339dp"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/calorie_description_card"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
+                android:elevation="4dp"
                 android:visibility="visible"
-                android:text=""
-                android:textColor="@color/black"
-                android:fontFamily="@font/dmsans_bold"
-                android:textSize="18sp"
+                android:background="@color/white"
+                app:cardCornerRadius="10dp"
+                android:paddingBottom="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/calorie_balance_layout"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp">
 
-            <TextView
-                android:id="@+id/iron_description_text"
-                android:layout_width="339dp"
-                android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:visibility="visible"
-                android:fontFamily="@font/dmsans_regular"
-                android:layout_marginTop="8dp"
-                android:text=""
-                app:layout_constraintTop_toBottomOf="@+id/iron_description_heading"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp">
+
+                    <TextView
+                        android:id="@+id/iron_description_heading"
+                        android:layout_width="339dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="20dp"
+                        android:visibility="visible"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textSize="18sp"
+                        app:layout_constraintTop_toBottomOf="@+id/calorie_balance_layout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <TextView
+                        android:id="@+id/iron_description_text"
+                        android:layout_width="339dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="16dp"
+                        android:visibility="visible"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:layout_marginTop="8dp"
+                        android:text=""
+                        app:layout_constraintTop_toBottomOf="@+id/iron_description_heading"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/lyt_recommended_card"
@@ -507,7 +534,7 @@
                 android:background="@color/white"
                 app:cardCornerRadius="10dp"
                 android:paddingBottom="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/iron_description_text"
+                app:layout_constraintTop_toBottomOf="@+id/calorie_description_card"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="15dp"
