--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -260,7 +260,7 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:textSize="16sp"
-                            android:fontFamily="@font/dmsans_bold"
+                            android:fontFamily="@font/merriweather_bold"
                             android:textColor="@color/black_no_meals"
                             android:text="Nutritional Information" />
 
