--- a/app/src/main/res/layout/fragment_recipe_search.xml
+++ b/app/src/main/res/layout/fragment_recipe_search.xml
@@ -193,12 +193,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/tabContentCard"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="110dp"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
