--- a/app/src/main/res/layout/item_dinner_meal_logs_ai.xml
+++ b/app/src/main/res/layout/item_dinner_meal_logs_ai.xml
@@ -269,7 +269,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center"
-                    android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp">
 
                     <ImageView
@@ -306,7 +305,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center"
-                    android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp">
 
                     <ImageView
@@ -342,8 +340,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_marginStart="10dp">
+                    android:gravity="center">
 
                     <ImageView
                         android:id="@+id/imageFats"
