--- a/app/src/main/res/layout/fragment_emotions_past_week.xml
+++ b/app/src/main/res/layout/fragment_emotions_past_week.xml
@@ -86,6 +86,18 @@
                     android:orientation="horizontal"
                     android:weightSum="4">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp">
+                        <TextView
+                            android:layout_width="5dp"
+                            android:layout_height="5dp"
+                            android:background="@drawable/circle_shape"
+                            android:backgroundTint="@color/white"
+                            android:gravity="end" />
+                    </LinearLayout>
+
                     <!-- Block 1 -->
                     <LinearLayout
                         android:layout_width="0dp"
