--- a/app/src/main/res/layout/fragment_sleep_performance.xml
+++ b/app/src/main/res/layout/fragment_sleep_performance.xml
@@ -14,22 +14,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/sleep_back_icon"
             android:id="@+id/img_back"
             android:layout_marginStart="22dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sleep Performance"
             android:textSize="22sp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/sleep_text_color"
-            android:layout_marginBottom="3dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
