fixes jira bugs

--- a/app/src/main/res/layout/dialog_fragment_log_last_night_sleep.xml
+++ b/app/src/main/res/layout/dialog_fragment_log_last_night_sleep.xml
@@ -235,10 +235,11 @@
         android:id="@+id/btnSaveLog"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Save Log"
+        android:text="Save"
         android:textAlignment="center"
         android:fontFamily="@font/dmsans_bold"
         android:gravity="center"
+        android:textSize="20sp"
         android:textColor="@android:color/white"
         android:backgroundTint="#007BFF"
         android:layout_marginTop="25dp"
