--- a/app/src/main/res/layout/fragment_resting_heart_rate.xml
+++ b/app/src/main/res/layout/fragment_resting_heart_rate.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@id/header_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -349,13 +350,13 @@
                 android:textSize="16dp"
                 android:fontFamily="@font/dmsans_regular"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="20dp"
                 android:text="Resting Heart Rate (RHR) is the number of times your heart beats per minute while at complete rest. It is a key indicator of cardiovascular fitness and overall heart health. A lower RHR typically reflects better heart efficiency and aerobic fitness, while a higher RHR may indicate stress, fatigue, dehydration, or other factors affecting your recovery.
 Several factors influence RHR, including sleep quality, hydration, stress levels, and overall fitness. Tracking your RHR over time can help you understand trends in your health, detect early signs of overtraining, and gauge improvements in your fitness level.
 At RightLife, we use RHR as a foundational metric to assess recovery, overall cardiovascular health, and fitness progress. It also plays a role in refining other key insights, such as Workout Zones and Ideal Sleep, to provide a well-rounded view of your well-being."
                 app:layout_constraintTop_toBottomOf="@+id/heartRateDescriptionHeading"
                 app:layout_constraintStart_toStartOf="parent"
                 />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
