--- a/app/src/main/res/layout/fragment_create_meal.xml
+++ b/app/src/main/res/layout/fragment_create_meal.xml
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -93,15 +93,14 @@
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/layout_add_name"
-                        android:layout_width="300dp"
+                        android:layout_width="330dp"
                         android:layout_height="70dp"
                         android:orientation="horizontal"
                         android:background="@drawable/green_border_white_bg"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginTop="40sp"
-                        android:gravity="center"
-                        android:layout_marginBottom="30dp">
+                        android:gravity="center">
 
                         <EditText
                             android:id="@+id/et_add_name"
@@ -109,6 +108,7 @@
                             android:layout_height="wrap_content"
                             android:padding="10dp"
                             android:gravity="center"
+                            android:maxLength="20"
                             android:layout_gravity="center"
                             android:background="@null"
                             android:textSize="30sp"
@@ -118,6 +118,21 @@
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
+                    <TextView
+                        android:id="@+id/tvCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="30dp"
+                        app:layout_constraintTop_toBottomOf="@+id/editText"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_gravity="center"
+                        android:textSize="14sp"
+                        android:textColor="@color/gray_past_price"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:text="0/20 Ch"/>
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -125,7 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -292,7 +307,6 @@
                     </androidx.recyclerview.widget.RecyclerView>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
