--- a/app/src/main/res/layout/item_my_meal_ai.xml
+++ b/app/src/main/res/layout/item_my_meal_ai.xml
@@ -101,7 +101,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:gravity="center"
+            android:gravity="left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view">
@@ -147,7 +147,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
 
                 <ImageView
@@ -184,7 +183,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
 
                 <ImageView
@@ -221,7 +219,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp">
 
                 <ImageView
@@ -257,8 +254,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginStart="10dp">
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/image_dewpoint"
