--- a/app/src/main/res/layout/fragment_create_meal.xml
+++ b/app/src/main/res/layout/fragment_create_meal.xml
@@ -3,14 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/meal_log_background"
     android:id="@+id/layout_main">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="90dp">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -315,6 +320,16 @@
     </ScrollView>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/layout_save_meal"
         android:layout_width="300dp"
         android:layout_height="50dp"
@@ -327,7 +342,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/tv_save_meal"
@@ -358,7 +373,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="30sp"
         android:gravity="center"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/tv_continue"
@@ -369,6 +384,8 @@
             android:textColor="@color/white"
             android:fontFamily="@font/dmsans_bold"
             android:text="Continue"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
