--- a/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
+++ b/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
@@ -261,11 +261,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
+                        android:layout_marginTop="5dp"
                         android:visibility="gone"
                         android:layout_marginEnd="20dp"
                         android:background="@drawable/grey_border_bg"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_average_needed_time"
+                        app:layout_constraintTop_toBottomOf="@+id/percentage_text_average"
                         app:layout_constraintEnd_toEndOf="parent">
 
                         <TextView
