--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -259,12 +259,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="62dp"
                         android:elevation="4dp"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:background="@color/white"
                         app:cardCornerRadius="10dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/percentageTv"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent">
