RAD-7513: Android[Prod]>Thinkright>Affirmation>"quick guides to affirmation" popup>Incorrect header font used in “Quick guides to affirmation” popup

--- a/app/src/main/res/layout/dialog_info_affirmation.xml
+++ b/app/src/main/res/layout/dialog_info_affirmation.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:gravity="center"
             android:text="Quick Guides To Affirmations"
             android:textColor="@color/txt_color_header"
