Following Issues Resolved on 13 Feb 2026 - RAD-6319: [android][production]Timer selection color incorrect on sleep schedule selection - RAD-7638: Android[Prod]>Settings>App settings>Export All health data detail page>Incorrect dash (“en dash”) displayed on Export All Health Data detail page - RAD-6110: Android[Prod]>Jump back in section>"Jump Back In" content does not resume from last played position - RAD-7629: Android[Prod]Profile>age field>Incorrect font used for “What is your age” and "what was your gender at birth" header in Profile section - RAD-7626: Android[Prod]Profile>Last Name field is mandatory instead of optional in Profile section - RAD-7624: Android[Prod]Series>video Episode>Full series name and content description not displayed in Video Episode screen

--- a/app/src/main/res/layout/activity_breathwork_practice.xml
+++ b/app/src/main/res/layout/activity_breathwork_practice.xml
@@ -81,8 +81,8 @@
             android:layout_marginBottom="50dp"
             android:text="Inhale"
             android:gravity="center_horizontal"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="30sp"
+            android:fontFamily="@font/dmsans_semibold"
             android:textColor="@color/black" />
 
         <!-- Animated Circle -->
