--- a/app/src/main/res/layout/activity_todays_affirmation.xml
+++ b/app/src/main/res/layout/activity_todays_affirmation.xml
@@ -52,6 +52,7 @@
             android:layout_alignParentEnd="true"
             android:gravity="center"
             android:textSize="10sp"
+            android:textColor="@color/white"
             android:fontFamily="@font/dmsans_bold"
             android:backgroundTint="@color/color_green"
             android:enabled="false"/>
