--- a/app/src/main/res/layout/activity_breathwork_session.xml
+++ b/app/src/main/res/layout/activity_breathwork_session.xml
@@ -321,7 +321,8 @@
                     <Switch
                         android:id="@+id/switchHaptic"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:checked="true" />
                 </LinearLayout>
             </LinearLayout>
             <!-- Continue Button -->
