--- a/app/src/main/res/layout/layout_discard_bottomsheet.xml
+++ b/app/src/main/res/layout/layout_discard_bottomsheet.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:gravity="center"
         android:text="Discard Your Playlist?"
         android:textColor="@color/txt_color_header"
